--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="about.css"/>
-    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="css/about.css"/>
+    <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
