--- a/support.html
+++ b/support.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="support.css"/>
-    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="css/support.css"/>
+    <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
