--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                 </div>
             </div>
         </section>
-        <script src="profil.js"></script>
-        <script src="corz.js"></script>
+        <script src="js/profil.js"></script>
+        <script src="js/corz.js"></script>
 </body>
 </html>
