--- a/support.html
+++ b/support.html
@@ -139,8 +139,8 @@
             </div>
         </div>
     </section>
-    <script src="profil.js"></script>
-    <script src="corz.js"></script>
-    <script src="support.js"></script>
+    <script src="js/profil.js"></script>
+    <script src="js/corz.js"></script>
+    <script src="js/support.js"></script>
 </body>
 </html>
