--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -211,48 +211,52 @@
         <section class="foodpresent">
             <div class="glav_contain">
                 <div class="foodpresent1"> 
-                    <div class="food-item">
-                        <img src="img/image 1-1.png">
-                        <div class="item-info">
-                            <p>
-                                <span class="nazvanres"> KFC</span>
-                                <span class="gold-star">&#9733;</span> 
-                                <span class="ocenka" style="padding-right:370px">4,9</span>
-                                <span class="heart-icon">&#10084;</span>
-                            </p>
+                    <div class="food-row">
+                        <div class="food-item">
+                            <img src="img/image 1-1.png">
+                            <div class="item-info">
+                                <p>
+                                    <span class="nazvanres"> KFC</span>
+                                    <span class="gold-star">&#9733;</span> 
+                                    <span class="ocenka" style="padding-right:370px">4,9</span>
+                                    <span class="heart-icon">&#10084;</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="food-item">
+                            <img src="img/image 1-2.png">
+                            <div class="item-info">
+                                <p>
+                                    <span class="nazvanres"> Burger King</span>
+                                    <span class="gold-star">&#9733;</span>
+                                    <span class="ocenka" style="padding-right:240px">4,6</span>
+                                    <span class="heart-icon">&#10084;</span>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="food-item">
-                        <img src="img/image 1-2.png">
-                        <div class="item-info">
-                            <p>
-                                <span class="nazvanres"> Burger King</span>
-                                <span class="gold-star">&#9733;</span>
-                                <span class="ocenka" style="padding-right:240px">4,6</span>
-                                <span class="heart-icon">&#10084;</span>
-                            </p>
+                        <div class="food-row">
+                        <div class="food-item">
+                            <img src="img/2233.png">
+                            <div class="item-info">
+                                <p>
+                                    <span class="nazvanres"> Mc Donalds</span>
+                                    <span class="gold-star">&#9733;</span> 
+                                    <span class="ocenka" style="padding-right:240px">4,6</span>
+                                    <span class="heart-icon">&#10084;</span>
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="food-item">
-                        <img src="img/2233.png">
-                        <div class="item-info">
-                            <p>
-                                <span class="nazvanres"> Mc Donalds</span>
-                                <span class="gold-star">&#9733;</span> 
-                                <span class="ocenka" style="padding-right:240px">4,6</span>
-                                <span class="heart-icon">&#10084;</span>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="food-item">
-                        <img src="img/image 1-3.png" >
-                        <div class="item-info">
-                            <p>
-                                <span class="nazvanres"> Okadzaki</span>
-                                <span class="gold-star">&#9733;</span>
-                                <span class="ocenka" style="padding-right:295px">5</span>
-                                <span class="heart-icon">&#10084;</span>
-                            </p>
+                        <div class="food-item">
+                            <img src="img/image 1-3.png" >
+                            <div class="item-info">
+                                <p>
+                                    <span class="nazvanres"> Okadzaki</span>
+                                    <span class="gold-star">&#9733;</span>
+                                    <span class="ocenka" style="padding-right:295px">5</span>
+                                    <span class="heart-icon">&#10084;</span>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -497,7 +501,7 @@
                 </div>
             </div>
         </section>
-        <script src="js/profil.js"></script>
-        <script src="js/corz.js"></script>
+        <script src="profil.js"></script>
+        <script src="corz.js"></script>
 </body>
 </html>
