--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <p>
                             <span class="nazvanres" >Coffee boom</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:70px">4,6</span>
+                            <span class="ocenka" style="padding-right:160px">4,6</span>
                             <span class="heart-icon">&#10084;</span>
                         </p>
                     </div>
@@ -287,8 +287,8 @@
                         <p>
                             <span class="nazvanres">Farш</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:70px">4,9</span>
-                            <span class="heart-icon" style="padding-left:100px">&#10084;</span>
+                            <span class="ocenka" style="padding-right:145px">4,9</span>
+                            <span class="heart-icon" style="padding-left:110px">&#10084;</span>
                         </p>
                     </div>
                 </div>
@@ -296,10 +296,10 @@
                     <img src="img/image 11 (3).png" alt="Dish 1">
                     <div class="dostavka-info">
                         <p>
-                            <span class="nazvanres">Узбечка</span>
+                            <span class="nazvanres" style="margin-left:-1px">Узбечка</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:40px">4,6</span>
-                            <span class="heart-icon" style="padding-left:80px">&#10084;</span>
+                            <span class="ocenka" style="padding-right:100px">4,6</span>
+                            <span class="heart-icon" style="padding-left:110px">&#10084;</span>
                         </p>
                     </div>
                 </div>
@@ -309,7 +309,7 @@
                         <p>
                             <span class="nazvanres">Шарью</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:80px">4</span>
+                            <span class="ocenka" style="padding-right:160px">4</span>
                             <span class="heart-icon" style="padding-left:70px">&#10084;</span>
                         </p>
                     </div>
@@ -331,7 +331,7 @@
                         <p>
                             <span class="nazvanres" >Коктем</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:60px">4,6</span>
+                            <span class="ocenka" style="padding-right:150px">4,6</span>
                             <span class="heart-icon" style="padding-left:70px">&#10084;</span>
                         </p>
                     </div>
@@ -342,7 +342,7 @@
                         <p>
                             <span class="nazvanres">Дом</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:70px">4,9</span>
+                            <span class="ocenka" style="padding-right:150px">4,9</span>
                             <span class="heart-icon" style="padding-left:100px">&#10084;</span>
                         </p>
                     </div>
@@ -353,7 +353,7 @@
                         <p>
                             <span class="nazvanres">NAVAT</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:40px">4,6</span>
+                            <span class="ocenka" style="padding-right:140px">4,6</span>
                             <span class="heart-icon" style="padding-left:80px">&#10084;</span>
                         </p>
                     </div>
@@ -364,7 +364,7 @@
                         <p>
                             <span class="nazvanres">Okadzaki</span>
                             <span class="gold-star">&#9733;</span>
-                            <span class="ocenka" style="padding-right:70px">5</span>
+                            <span class="ocenka" style="padding-right:150px">5</span>
                             <span class="heart-icon" style="padding-left:60px">&#10084;</span>
                         </p>
                     </div>
